Revert "[FEAT] Implementación de flujos para suscripciones a fondos de inversión"