@@ -1,12 +1,11 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.1'
-	id 'io.spring.dependency-management' version '1.1.7'
-	id 'com.github.johnrengelman.shadow' version '8.1.1'
+	id 'org.springframework.boot' version '3.3.0'
+	id 'io.spring.dependency-management' version '1.1.5'
 }
 
 group = 'com.investment'
-version = '1.0.0'
+version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
@@ -19,9 +18,6 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'com.amazonaws.serverless:aws-serverless-java-container-springboot3:2.1.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
@@ -32,18 +28,4 @@ springBoot {
 
 tasks.named('test') {
 	useJUnitPlatform()
-    jvmArgs("-XX:+EnableDynamicAgentLoading") // Required for Mockito in JDK 21+
-}
-
-tasks.named('shadowJar') {
-	archiveClassifier = 'aws'
-    archiveVersion = '' // Disable version in filename
-	mergeServiceFiles()
-	append 'META-INF/spring.handlers'
-	append 'META-INF/spring.schemas'
-	append 'META-INF/spring.tooling'
-	transform(com.github.jengelman.gradle.plugins.shadow.transformers.PropertiesFileTransformer) {
-		paths = ['META-INF/spring.factories']
-		mergeStrategy = "append"
-	}
 }
